# persistentMemory

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
persistentMemory/: PersistentMemory.py
persistentMemory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_PersistentMemory.py
