[project]
name = "PersistentMemory"
version = "0.1.0"
authors = [
  { name="ufukilke", email="ufukilkeavci@gmail.com" },
]
description = "Package for persistent memory"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ufukilkeavci/persistentMemory"
Issues = "https://github.com/ufukilkeavci/persistentMemory/issues"